--- a/Shantera/GameProject/ProjectBrowserDialog.xaml
+++ b/Shantera/GameProject/ProjectBrowserDialog.xaml
@@ -1,12 +1,26 @@
 ﻿<Window x:Class="Shantera.GameProject.ProjectBrowserDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Shantera.GameProject"
         mc:Ignorable="d" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
-        Title="ProjectBrowserDialog" Height="379" Width="800">
+        Title="Project Browser" Height="600" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="20">
+            <ToggleButton Content="Open Project" x:Name="openProjectButton" FontSize="32"
+                          Click="OnTOggleButton_Click" IsChecked="true"/>
+            
+            <ToggleButton Content="Create Project" x:Name="createProjectButton" FontSize="32" Margin="30,0,0,0" 
+                          Click="OnTOggleButton_Click" IsChecked="false"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" Grid.Row="1" x:Name="browserContent">
+            <local:OpenProjectView/>
+            <local:NewProjectView/>
+        </StackPanel>
     </Grid>
 </Window>
